# twitter-pull

./: .env.example  .env.telegram.example  .gitignore  CONFIG_SUMMARY.md  QUICK_START.md  README.md  SETUP_NOTES.md  main.py  onboard.py  pyproject.toml  requirements.txt  run_and_send.sh  send_telegram_bot.py  send_telegram_summary.py  send_to_telegram.py  setup.sh  setup_cron.sh  setup_cron_telegram.sh
config/: feed.yaml  presets.yaml  settings.yaml  topics.yaml
src/fetchers/: base.py  getxapi.py  twitterapi_io.py  twscrape_fetcher.py
src/outputs/: markdown.py
src/processors/: dedup.py  summarizer.py
